마카오 레터 완성

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel ="stylesheet" href="assets/global.css">
         <link rel ="stylesheet" href="assets/header.css">
         <link rel ="stylesheet" href="assets/slogan.css">
+        <link rel ="stylesheet" href="assets/posts.css">
     </head>
     <body>
         <header>
@@ -41,6 +42,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -58,6 +60,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -75,6 +78,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -92,6 +96,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -109,6 +114,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -126,6 +132,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -143,6 +150,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -160,6 +168,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -177,6 +186,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -194,6 +204,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -211,6 +222,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
@@ -228,6 +240,7 @@
                                 티본 스테이크를 통째로 씹어먹는
                                 상남자와 스시를 먹은 남자 100명이
                                 죽을 때 까지 싸우면 누가 이길까
+                                당연히 스테이크를 씹어먹는 쪽이다
                             </p>
                             <time datetime = "2022-01-01">
                                 2022/01/01
