고래 사진 수정 soild수정

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </header>
         <main>
             <article id = "slogan" >
-                <img class="decoration" src="/images/whale.png" alt ="whale">
+                <img class="decoration" src="images/whale.png" alt ="whale">
                 <div class = "content">
                     <h2>
                         세상의 모든 뉴스,
